# garnet

./: .gitignore  README.md  api.json  docker-compose.yml  index.html
.github/workflows/: api_doc_deploy.yml
api_server/: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml
api_server/csv/: Öffentlichen_Mülltonnen.csv
api_server/migrations/2019-11-06-153515_create_garnet/: down.sql  up.sql
api_server/src/: csv_reader.rs  db.rs  lib.rs  models.rs  routes.rs  schema.rs  tsp.rs
api_server/src/com/: mod.rs  responder.rs
assets/: api.json
assets/data/: bin_kn.csv  bins_kn.dbf  bins_kn.shp  districts_kn.dbf  districts_kn.shp
assets/model/: bayonet_lock.stl  extension.stl  lower_bin_part.stl  sensor_holder.stl  top.stl  upper_bin_part.stl
dj_backend/: README.md  manage.py  requirements.txt
dj_backend/dj_backend/: asgi.py  settings.py  urls.py  wsgi.py
dj_backend/litter_collection/: admin.py  apps.py  models.py  serializers.py  views.py
dj_backend/litter_collection/migrations/: 0001_initial.py  0002_auto_20200902_2239.py  0003_bin_bin_district.py  0004_auto_20200909_1936.py
dj_backend/litter_collection/utils/: exceptions.py  urls.py
docs/: api.json  base.html  index.html
frontend/: .env  README.md  gulpfile.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/components/: bin.js  button.js  district.js  icons.js  map.js  routing.js
frontend/src/page/: bin_collect.js  start.js
frontend/src/state/: index.js
utilites/: load.py  requirements.txt
(+14 files in other folders)
