[package]
name = "garnet-api"
version = "0.1.0"
authors = ["Valentin Beck <vale.beck@hotmail.de>"]
edition = "2018"

[dependencies]
rocket_contrib = {version = "0.4.2", default-features = false, features = ["json"]}
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }
# For connecting with the MySQL database
diesel = { version = "1.4.2", features = ["mysql", "numeric"] }
dotenv = "0.15.0"
#fast_paths = "0.1.0"
rocket_cors = "0.5.0"

# TSP Crates
#darwin-rs = "0.4"
#time = "0.1"
#rand = "0.3"
#simplelog = "0.4"
